--- a/frontend/css-style/income-page/income.css
+++ b/frontend/css-style/income-page/income.css
@@ -51,7 +51,7 @@
 
 .income-chart-wrap > canvas {
   display: block;
-  min-width: 300px;
+  min-width: 100%;
   height: 100%;
 }
 
